--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Dinky theme
-description: Test website description
-show_downloads: true
+title: Carrie Cheung
+description: Data Science Musings
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-dinky
